# esp-bt-localization

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  esp_idf_project_configuration.json  sdkconfig.master  sdkconfig.scanner
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/certificates/: README.md  generate_certs.py
main/include/core/: bt_common.h  clock.h  defaults.h  device_data.h  gap_common.h  gatt_common.h
main/include/core/utility/: common.h  mac.h  uuid.h  uuid.hpp
main/include/core/wrapper/: advertisement_data.h  device.h  gap_ble_wrapper.h  gap_ble_wrapper.hpp  gap_bt_wrapper.h  gatt_attribute_table.h  gattc_wrapper.h  gatts_wrapper.h  wifi.h
main/include/master/: device_memory.h  device_memory_data.h  master.h  master_cfg.h  master_impl.h  nvs_utils.h  system_msg.h
main/include/master/http/: index_page.h  server.h  server_cfg.h  server_impl.h
main/include/master/memory/: device_memory.h  device_memory_data.h  idevice_memory.h  no_processing_memory.h
main/include/math/: matrix.h  matrix.hpp  norm.h
main/include/math/path_loss/: log_distance.h
main/include/scanner/: device_memory.h  device_memory_data.h  scanner.h  scanner_cfg.h  scanner_impl.h
main/include/tag/: tag.h  tag_cfg.h  tag_impl.h
main/src/: cfg_master.h  cfg_scanner.h  cfg_tag.h  main.cpp
main/src/core/: bt_common.cpp  clock.cpp  device_data.cpp  gap_common.cpp  gatt_common.cpp
main/src/master/: device_memory.cpp  device_memory_data.cpp  master.cpp  master_impl.cpp  nvs_utils.cpp  system_msg.cpp
main/src/math/: norm.cpp
main/src/scanner/: device_memory.cpp  device_memory_data.cpp  format.excalidraw  scanner.cpp  scanner_impl.cpp  states.excalidraw
main/src/tag/: tag.cpp  tag_impl.cpp
(+47 files in other folders)
